[package]
name = "astrocore"
version = "0.1.0"
authors = ["A.A.Abroskin <arkweid@evilmartians.com>"]
edition = "2018"

[dependencies]
sha2 = "0.8.0" # suppose replace it with sodiumoxide
rand = "0.6.5"
log = "0.4"
env_logger = "0.6.0"

sodiumoxide = "0.2.0"
byteorder = "1"
base32 = "0.3.1"
crc16 = "0.3.4"
base64 = "0.9.0"
num-traits = "0.1.41"
num-bigint = "0.1.41"
bigdecimal = "0.0.10"
serde = { version = "1.0.27", features = ["derive"] }
serde_repr = "0.1"
serde_derive = "1.0.27"
serde_bytes = "0.10.3"
serde-xdr = { version = "0.5.0", git = "https://github.com/Arkweid/serde-xdr" }
simulacrum = "0.3.0"
itertools = "0.8"
toml = "0.4"
lazy_static = "1.3"
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
dotenv = "0.10"
riker = "0.2.4"
riker-default = "0.2.4"

[profile.dev]
debug = true
opt-level = 0
